--- a/public/css/app.css
+++ b/public/css/app.css
@@ -830,8 +830,8 @@ form button[type=submit] {
 }
 
 header.with-background {
-    background: url("/img/hero.jpg");
-    background-size: cover;
+    background: #333;
+    /*background-size: cover;*/
     color: #e9e9e9;
 }
 
